# llumnix_sim

./: .gitignore  LUMNIX_README.md  llumnix.md  main.py  pyproject.toml  requirements.txt
results/scheduler_cmp/: 2025-11-12_20-00-04_scheduler_comparison.csv  2025-11-15_17-19-34_scheduler_comparison.csv
scripts/: compare_schedulers.py
vidur/: main.py  simulator.py
vidur/config/: config.py  flat_dataclass.py
vidur/entities/: batch.py  request.py
vidur/events/: __init__.py  batch_stage_end_event.py  migration_event.py  rebalance_event.py
vidur/metrics/: metrics_store.py
vidur/request_generator/: synthetic_request_generator.py
vidur/scheduler/global_scheduler/: base_global_scheduler.py  global_scheduler_registry.py  llumnix_global_scheduler.py
vidur/scheduler/global_scheduler/llumnix_global_scheduler/: global_scheduler.py
vidur/scheduler/replica_scheduler/: base_replica_scheduler.py  llumlet_replica_scheduler.py  replica_scheduler_registry.py  vllm_replica_scheduler.py
vidur/scheduler/replica_scheduler/llumlet_scheduler/: llumlet.py
vidur/types/: event_type.py  global_scheduler_type.py  replica_scheduler_type.py
