[project]
name = "llumnix-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddsketch>=3.0.1",
    "fasteners>=0.20",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]
